Added support for major links, and added more data

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <h1>playing apart</h1>
+  <span onclick="filterNodes()">toggle minor on/off</span>
   <svg width="960" height="600">
   </svg>
   <div id="info" />
